--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,5 @@
 
-ul {
+ul.navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -7,11 +7,11 @@ ul {
     background-color: #333;
   }
   
-  li {
+  li.navbar {
     float: left;
   }
   
-  li a {
+  li.navbar a {
     display: block;
     color: white;
     text-align: center;
@@ -19,7 +19,7 @@ ul {
     text-decoration: none;
   }
   
-  li a:hover:not(.active) {
+  li.navbar a:hover:not(.active) {
     background-color: #111;
   }
   
