--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -37,3 +37,14 @@ body {
   background-image: url(whitepaper.jpg);
   text-align: center;
 }
+.sign-heading {
+  width: 100px;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 25px
+}
